# focus_flow_cloud

./: AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  justfile
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/FocusFlowWidgetExtension/: FocusFlowLiveActivity.swift  FocusFlowStandByWidget.swift  FocusFlowWidgetBundle.swift  Info.plist
app/src-tauri/Shared/: FocusFlowAttributes.swift  SharedTimerState.swift
app/src-tauri/capabilities/: default.json
app/src-tauri/scripts/: check_ios_regen.sh  regen_xcode.sh
app/src-tauri/scripts/hooks/: pre-commit
app/src-tauri/src/: lib.rs  live_activity.rs
backend/: Cargo.toml  Dockerfile
backend/crates/adapters/: Cargo.toml
backend/crates/adapters/src/: http_error.rs  routes.rs
backend/crates/adapters/src/flashcards/http/flashcards/: export_flashcards.rs  import_flashcards.rs  mod.rs  routes.rs
backend/crates/adapters/src/http/: app_state.rs  mod.rs
backend/crates/adapters/src/http/dto/common/: focus_session.rs  session_type_enum.rs
backend/crates/adapters/src/http/session/: create_manual_session.rs  get_sessions.rs  update_session.rs
backend/crates/adapters/src/http/task/: get_scheduled_tasks.rs  get_tasks.rs
backend/crates/adapters/src/http/ws/: error.rs  handle_break_event.rs  handle_note_update.rs  handle_start_event.rs  handle_terminate_event.rs  handle_update_concentration_score.rs  handle_update_pomodoro_context.rs  mod.rs  sync_pomodoro_state.rs  update_pomodoro_state.rs  ws_handler.rs  ws_message.rs
backend/crates/adapters/src/persistence/: mod.rs
backend/crates/adapters/src/persistence/db_models/: db_category.rs  db_focus_session.rs
backend/crates/adapters/src/persistence/persistence_impl/: category_persistence_impl.rs  focus_session_persistence_impl.rs  mod.rs  pomodoro_state_in_memory_impl.rs  task_persistence_impl.rs  user_persistence_impl.rs  user_setting_persistence_impl.rs
backend/crates/adapters/src/shared/http/app_state/: flashcard_state.rs  tasks_state.rs  user_state.rs
backend/crates/adapters/src/tasks/http/session/: delete_session.rs  mod.rs  routes.rs  update_session.rs
backend/crates/adapters/src/tasks/http/ws/: update_pomodoro_state.rs
backend/crates/adapters/src/tasks/persistence/db_models/: db_focus_session.rs
backend/crates/adapters/src/tasks/persistence/impls/: focus_session_persistence_impl.rs
backend/crates/adapters/src/user/http/user_setting/: get_user_settings.rs
backend/crates/adapters/src/user/http/users/: admin_change_password.rs  admin_get_user_stats.rs  delete_user.rs  list_users.rs  mod.rs  routes.rs  update_user_by_admin.rs
backend/crates/adapters/src/user/persistence/db_models/: db_user.rs
backend/crates/adapters/src/user/persistence/impls/: user_persistence_impl.rs  user_setting_persistence_impl.rs
backend/crates/application/src/: lib.rs
backend/crates/application/src/repository_traits/: category_persistence.rs  focus_session_repository.rs  mod.rs  persistence_error.rs  pomodoro_state_repository.rs  task_persistence.rs  user_persistence.rs  user_setting_persistence.rs
backend/crates/application/src/tasks/traits/: focus_session_repository.rs
backend/crates/application/src/tasks/use_cases/focus_session/: delete_focus_session.rs  mod.rs  update_focus_session.rs
backend/crates/application/src/tasks/use_cases/pomodoro_state/: fetch_user_pomodoro_state.rs
backend/crates/application/src/tasks/use_cases/task/: get_tasks.rs
backend/crates/application/src/use_cases/: mod.rs
backend/crates/application/src/use_cases/category/: create_category_usecase.rs  delete_categories_usecase.rs  delete_category_usecase.rs  get_category_and_task_usecase.rs  get_category_usecase.rs  update_category_usecase.rs
backend/crates/application/src/use_cases/focus_session/: create_manual_session.rs  find_sessions_by_filters.rs  mod.rs  update_focus_session.rs
backend/crates/application/src/use_cases/pomodoro_state/: fetch_user_pomodoro_state.rs  init_pomodoro_state.rs  mod.rs  pause_session.rs  start_session.rs  terminate_session.rs  update_current_session.rs  update_pomodoro_context.rs
backend/crates/application/src/use_cases/stats/: calculate_stats_by_period.rs
backend/crates/application/src/use_cases/task/: complete_task.rs  create_task.rs  delete_tasks.rs  get_scheduled_tasks.rs  get_tasks.rs  orphan_tasks.rs  update_task.rs
backend/crates/application/src/use_cases/user/: delete_user.rs  get_user_info.rs  login_user.rs  refresh_token.rs  register_user.rs  update_password.rs  update_user_username.rs  validate_user_credentials.rs
backend/crates/application/src/use_cases/user_settings/: get_settings.rs  update_setting.rs
backend/crates/application/src/user/traits/: user_persistence.rs  user_setting_persistence.rs
backend/crates/application/src/user/use_cases/user/: admin_change_password.rs  admin_get_user_stats.rs  list_users.rs  mod.rs  update_user_by_admin.rs
backend/crates/application/src/user/use_cases/user_settings/: get_settings.rs  update_setting.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/entities/: focus_session.rs  mod.rs
backend/crates/domain/src/entities/pomodoro/: mod.rs  pomodoro_state.rs
backend/crates/domain/src/services/stats/: last_14d_counts_service.rs
backend/crates/domain/src/tasks/entities/: focus_session.rs
backend/crates/infrastructure/src/: setup.rs
backend/crates/infrastructure/src/setup/: flashcard_setup.rs  tasks_setup.rs  user_setup.rs
backend/migrations/2026-06-20-000000-0000_user_settings_per_user/: down.sql  up.sql
backend/tests/: session_e2e.rs
focus_flow_app/: Cargo.toml
focus_flow_app/assets/: tailwind.css
focus_flow_app/assets/locales/: en.json  it.json
focus_flow_app/src/: main.rs
focus_flow_app/src/components/select/: component.rs
focus_flow_app/src/i18n/: mod.rs
focus_flow_app/src/presentation/components/task/: create_task_sheet.rs  task_row.rs
focus_flow_app/src/presentation/views/: auth_page.rs  calendar.rs  categories.rs  flashcards.rs  flashcards_layout.rs  layout.rs  mod.rs  pomodoro.rs  settings.rs  stats.rs  tasks_layout.rs  todo.rs
(+58 files in other folders)
