[workspace]

[package]
name = "focus-flow"
version = "1.1.0"
description = "FocusFlow - Pomodoro timer and task management"
authors = ["Francesco Pio Gaglione"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
include = ["src/**", "build.rs", "Cargo.toml", "icons/**", "tauri.conf.json", "capabilities/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
