[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
async-trait = { workspace = true }
rand.workspace = true
tracing.workspace = true
mockall = { workspace = true, optional = true }

[features]
test-utils = ["mockall"]

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["macros", "full"] }
